--- a/7 - desafiostyle2.css
+++ b/7 - desafiostyle2.css
@@ -99,7 +99,7 @@ img {
     }
 
     button {
-        position: relative;
+        position: sticky;
         left: 400px;
     }
 
@@ -136,4 +136,50 @@ img {
         margin-left: 120px;
 
     }
+}
+
+@media screen and (max-width: 440px){
+
+    .caixa2 {
+        position: absolute;
+        left: 0;
+        width: 100px;
+    }
+
+    img {
+        margin-top: 459px;
+        width: 279px;
+        height: 268px;
+        margin-left: 20px;
+
+    }
+
+
+    h1 {
+        font-size: 20px;
+        line-height: 20px;
+        text-align: center;
+        letter-spacing: 0.596154px;
+        color: #161A49;
+        width: 200px;
+        height: 5px;
+        margin-bottom: 50px;
+        margin-left: 25px;
+
+    }
+
+    p {
+        font-size: 14px;
+        line-height: 33px;
+        letter-spacing: 0.5px;
+        color: #4B505A;
+        height: 300px;
+        width: 250px;
+        margin-left: auto;
+    }
+
+    section {
+        margin: 47px 0 55px 50px;
+    }
+
 }
